terraform/main.tf
terraform {
  backend "remote" {
    organization = "dev-platform"

    workspaces {
      name = "projects-manager"
    }
  }

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.27"
    }
  }

  required_version = ">= 0.14.9"
}

provider "aws" {
  profile = "default"
  region  = "eu-central-1"
}

data "aws_ami" "latest_ubuntu" {
  most_recent = true
  owners      = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-*-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }

  filter {
    name   = "architecture"
    values = ["x86_64"]
  }

}

resource "aws_security_group" "allow_traffic" {
  name        = "allow_traffic"
  description = "Allow http and ssh traffic"

  // Open default ssh port
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Docker container registry
  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Consul
  ingress {
    from_port   = 8500
    to_port     = 8500
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Consul
  ingress {
    from_port   = 8600
    to_port     = 8600
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Vault
  ingress {
    from_port   = 8200
    to_port     = 8200
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "projects-infra"
  }
}

variable "ssh_public_key" {
  description = "SSH public key"
  type        = string
}

resource "aws_key_pair" "projects_manager_key_pair" {
  key_name   = "projects_manager_key"
  public_key = var.ssh_public_key

  tags = {
    Name = "projects-infra"
  }
}

resource "aws_instance" "projects_infra_server" {
  ami           = data.aws_ami.latest_ubuntu.id
  instance_type = "t3.nano"

  key_name = aws_key_pair.projects_manager_key_pair.key_name
  vpc_security_group_ids = [aws_security_group.allow_traffic.id]

  tags = {
    Name = "projects-infra"
  }
}

resource "aws_security_group" "vpn_security_group" {
  name        = "vpn_security_group"
  description = "Allow http and ssh traffic"

  // Open default ssh port
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Open OpenVPN port
  ingress {
    from_port   = 1194
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "projects-infra"
  }
}

resource "aws_instance" "projects_infra_vpn" {
  ami           = data.aws_ami.latest_ubuntu.id
  instance_type = "t3.nano"

  key_name               = aws_key_pair.projects_manager_key_pair.key_name
  vpc_security_group_ids = [aws_security_group.allow_traffic.id]

  tags = {
    Name = "projects-infra"
  }
}
